switch writing_example from html to git

--- a/writing_example.Rmd
+++ b/writing_example.Rmd
@@ -2,7 +2,7 @@
 title: "Example"
 author: "Eric Morris"
 date: "September 13, 2018"
-output: html_document
+output: github_document
 ---
 
 I'm an R Markdown document! 
